[package]
name = "tung_client"
version = "0.1.0"
authors = ["Chris Kaltwasser <chris@chrisk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.13.0"
url = "2.2.2"
env_logger = "0.8.1"
json = "0.12.4"
